# supplychain

./: Agent_prompts.md  GAME_LOGIC_DOCS.md  SIMULATION_ENGINE_DOCS.md  USER_INTERFACE_DOCS.md  WARP.md  beer_game_architecture.md  demo_game_logic.py  demo_game_results.json  demo_simulation.py  pyproject.toml  run_web_server.py  simulation_results.json
simulation/: __init__.py
simulation/engine/: __init__.py  core.py  metrics.py
simulation/engine/entities/: __init__.py  base.py  nodes.py
simulation/game/: __init__.py  controller.py  policy_manager.py  scenario_manager.py
simulation/web/: __init__.py  app.py
simulation/web/api/: __init__.py  endpoints.py  websocket.py
simulation/web/static/css/: style.css
simulation/web/static/js/: game.js
simulation/web/templates/: index.html
